--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <ul id="tradeList"></ul>
 
   <script>
-    const API_URL = "https://YOUR-RENDER-URL.onrender.com/trades"; // Replace this
+    const API_URL = "https://fbp-backend.onrender.com/"; // Replace this
 
     document.getElementById("tradeForm").addEventListener("submit", async function(event) {
       event.preventDefault();
