--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <ul id="tradeList"></ul>
 
   <script>
-  const API_URL = "https://fbp-backend.onrender.com/trades";
+  const API_URL = "https://fbp-backend.onrender.com/trades"; // ✅ not just the root URL
 
     document.getElementById("tradeForm").addEventListener("submit", async function(event) {
   event.preventDefault();
